# pulumi-in-a-pickle

./: .envrc  .gitignore  Pulumi.dev.yaml  Pulumi.no-doubles.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
components/example/: __init__.py  example.py
providers/example/: __init__.py  base.py  example.py
terraform/: main.tf
