[tool.poetry]
name = "in-a-pickle-example"
version = "0.1.0"
description = ""
authors = ["ederst"]
license = "WHATEVA"

[tool.poetry.dependencies]
python = "^3.9"
pulumi = "^3.10.3"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
